--- a/django_server/dublin_bus/bus/templates/bus/covid.html
+++ b/django_server/dublin_bus/bus/templates/bus/covid.html
@@ -78,7 +78,7 @@
         </div>
         </section>
 
-        <section class="main-content-row">
+        <section class="main-content-row" style="background-color: white">
         <div class="small-columns-divider">
             <h5>Daily confirmed &amp; deaths</h5>
             <div class="chart-container point-container" style="width:800px;height:330px;overflow-x:auto">
